TEST VERSION added new page for testing new cloud storage schema.(entity = sensDat2)

--- a/index.html
+++ b/index.html
@@ -9,5 +9,31 @@
 <hr>
 <a href=uploadRequest.php>Upload data(test)</a><br>
 <a href=TodaysView.php>Temperature & Barometer monitoring page</a><br>
+<a href=todays-t.php>### TEST Version ###Temperature & Barometer viewer><br>
+<hr>
+<h3>Data conversion</h3>
+<form action="convertData.php">
+<table>
+<tr>
+  <td width=100>start date</td>
+  <td width=100>
+	<input type="text" name="start_date">
+  </td>
+</tr>
+<tr>
+  <td>end date</td>
+  <td>
+	<input type="text" name="end_date">
+  </td>
+</tr>
+<tr>
+  <td>convert</td>
+  <td>
+	<input type="submit" name="convet" value="convert">
+  </td>
+</tr>
+</table>
+</form>
+
 </body>
 </html>
