--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <td width=40></td>
   <td width=60>Date</td>
   <td width=100>
-    <input tpe="text" name="_start">
+    <input type="date" name="_start">
   </td>
 </tr>
 <tr>
